--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Body */
 body {
 	background-color: #f1f1f1;
@@ -9,7 +8,7 @@ form {
 	background-color: #fff;
 	padding: 20px;
 	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0,0,0,0.1);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Switch */
@@ -22,7 +21,7 @@ form {
 	-webkit-appearance: none;
 	width: 100%;
 	height: 20px;
-	border-radius: 10px;  
+	border-radius: 10px;
 	background-color: #ddd;
 	outline: none;
 	-webkit-transition: .2s;
@@ -34,7 +33,7 @@ form {
 	appearance: none;
 	width: 20px;
 	height: 20px;
-	border-radius: 50%; 
+	border-radius: 50%;
 	background-color: #2196f3;
 	cursor: pointer;
 }
@@ -42,7 +41,7 @@ form {
 .form-range::-moz-range-thumb {
 	width: 20px;
 	height: 20px;
-	border-radius: 50%; 
+	border-radius: 50%;
 	background-color: #2196f3;
 	cursor: pointer;
 }
@@ -71,4 +70,20 @@ form {
 
 .btn-primary:hover {
 	opacity: 0.8;
+}
+
+/* Set the height of the select element */
+.form-control {
+	height: 50px;
+}
+
+/* Adjust the height and line-height of the input-group-text element */
+.input-group-text {
+	height: 50px;
+	line-height: 50px;
+}
+
+/* Adjust the font size of the icon */
+.input-group-text i {
+	font-size: 1.2rem;
 }
